tests/macro/html-component-fail.stderr
error: this open tag has no corresponding close tag
  --> $DIR/html-component-fail.rs:33:13
   |
33 |     html! { <ChildComponent> };
   |             ^^^^^^^^^^^^^^^^

error: expected identifier
  --> $DIR/html-component-fail.rs:34:31
   |
34 |     html! { <ChildComponent:: /> };
   |                               ^

error: this open tag has no corresponding close tag
  --> $DIR/html-component-fail.rs:37:13
   |
37 |     html! { <ChildComponent with props > };
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected type, found `/`
  --> $DIR/html-component-fail.rs:49:14
   |
49 |     html! { </ChildComponent> };
   |              ^

error: this open tag has no corresponding close tag
  --> $DIR/html-component-fail.rs:50:13
   |
50 |     html! { <ChildComponent><ChildComponent></ChildComponent> };
   |             ^^^^^^^^^^^^^^^^

error: only one root html element allowed
  --> $DIR/html-component-fail.rs:51:46
   |
51 |     html! { <ChildComponent></ChildComponent><ChildComponent></ChildComponent> };
   |                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0425]: cannot find value `blah` in this scope
  --> $DIR/html-component-fail.rs:38:34
   |
38 |     html! { <ChildComponent with blah /> };
   |                                  ^^^^ not found in this scope

error[E0599]: no method named `build` found for type `ChildPropertiesBuilder<ChildPropertiesBuilderStep_missing_required_prop_int>` in the current scope
  --> $DIR/html-component-fail.rs:35:5
   |
5  | #[derive(Properties, PartialEq)]
   |                   - method `build` not found for this
...
35 |     html! { <ChildComponent with /> };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0599]: no method named `build` found for type `ChildPropertiesBuilder<ChildPropertiesBuilderStep_missing_required_prop_int>` in the current scope
  --> $DIR/html-component-fail.rs:36:5
   |
5  | #[derive(Properties, PartialEq)]
   |                   - method `build` not found for this
...
36 |     html! { <ChildComponent props /> };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0599]: no method named `build` found for type `ChildPropertiesBuilder<ChildPropertiesBuilderStep_missing_required_prop_int>` in the current scope
  --> $DIR/html-component-fail.rs:39:5
   |
5  | #[derive(Properties, PartialEq)]
   |                   - method `build` not found for this
...
39 |     html! { <ChildComponent with props () /> };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0599]: no method named `build` found for type `ChildPropertiesBuilder<ChildPropertiesBuilderStep_missing_required_prop_int>` in the current scope
  --> $DIR/html-component-fail.rs:40:5
   |
5  | #[derive(Properties, PartialEq)]
   |                   - method `build` not found for this
...
40 |     html! { <ChildComponent type=0 /> };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0599]: no method named `build` found for type `ChildPropertiesBuilder<ChildPropertiesBuilderStep_missing_required_prop_int>` in the current scope
  --> $DIR/html-component-fail.rs:41:5
   |
5  | #[derive(Properties, PartialEq)]
   |                   - method `build` not found for this
...
41 |     html! { <ChildComponent invalid-prop-name=0 /> };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0609]: no field `unknown` on type `ChildProperties`
  --> $DIR/html-component-fail.rs:42:29
   |
42 |     html! { <ChildComponent unknown="unknown" /> };
   |                             ^^^^^^^ unknown field
   |
   = note: available fields are: `string`, `int`

error[E0599]: no method named `unknown` found for type `ChildPropertiesBuilder<ChildPropertiesBuilderStep_missing_required_prop_int>` in the current scope
  --> $DIR/html-component-fail.rs:42:29
   |
5  | #[derive(Properties, PartialEq)]
   |                   - method `unknown` not found for this
...
42 |     html! { <ChildComponent unknown="unknown" /> };
   |                             ^^^^^^^

error[E0599]: no method named `build` found for type `ChildPropertiesBuilder<ChildPropertiesBuilderStep_missing_required_prop_int>` in the current scope
  --> $DIR/html-component-fail.rs:43:5
   |
5  | #[derive(Properties, PartialEq)]
   |                   - method `build` not found for this
...
43 |     html! { <ChildComponent string= /> };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/html-component-fail.rs:44:42
   |
44 |     html! { <ChildComponent int=1 string={} /> };
   |                                          ^^ expected struct `std::string::String`, found ()
   |
   = note: expected type `std::string::String`
              found type `()`

error[E0308]: mismatched types
  --> $DIR/html-component-fail.rs:45:42
   |
45 |     html! { <ChildComponent int=1 string=3 /> };
   |                                          ^
   |                                          |
   |                                          expected struct `std::string::String`, found integer
   |                                          help: try using a conversion method: `3.to_string()`
   |
   = note: expected type `std::string::String`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/html-component-fail.rs:46:42
   |
46 |     html! { <ChildComponent int=1 string={3} /> };
   |                                          ^^^
   |                                          |
   |                                          expected struct `std::string::String`, found integer
   |                                          help: try using a conversion method: `{3}.to_string()`
   |
   = note: expected type `std::string::String`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/html-component-fail.rs:47:33
   |
47 |     html! { <ChildComponent int=0u32 /> };
   |                                 ^^^^ expected i32, found u32

error[E0599]: no method named `string` found for type `ChildPropertiesBuilder<ChildPropertiesBuilderStep_missing_required_prop_int>` in the current scope
  --> $DIR/html-component-fail.rs:48:29
   |
5  | #[derive(Properties, PartialEq)]
   |                   - method `string` not found for this
...
48 |     html! { <ChildComponent string="abc" /> };
   |                             ^^^^^^

error[E0599]: no method named `children` found for type `ChildPropertiesBuilder<ChildPropertiesBuilderStep_missing_required_prop_int>` in the current scope
  --> $DIR/html-component-fail.rs:52:5
   |
5  | #[derive(Properties, PartialEq)]
   |                   - method `children` not found for this
...
52 |     html! { <ChildComponent>{ "Not allowed" }</ChildComponent> };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

Some errors occurred: E0308, E0425, E0599, E0609.
For more information about an error, try `rustc --explain E0308`.
